--- a/config.yaml
+++ b/config.yaml
@@ -6,12 +6,14 @@ credentials:
       logged_in: False
       name: John Doe
       password: password123 # Will be hashed automatically
+      role: admin
     janesmith:
       email: janesmith@example.com
       failed_login_attempts: 0
       logged_in: False
       name: Jane Smith
       password: password456 # Will be hashed automatically
+      role: user
 cookie:
   expiry_days: 30
   key: some_signature_key
